@@ -1,6 +1,10 @@
 2013-05-27  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* rcsc/player/self_intercept_v13.cpp:
+	- 1ステップダッシュのダッシュ効率計算で，ダッシュ方向ではなく自分
+	の体の向きを使用していたバグを修正
+
+	* rcsc/player/self_intercept_v13.cpp:
 	- 不要な関数呼び出し削除，デバッグメッセージ修正
 
 2013-05-20  Hidehisa Akiyama  <akky@users.sourceforge.jp>
